# rdkafka_repro

./: MODULE.bazel  WORKSPACE.bazel
