bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.1.0",
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.27",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.27",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)
